# http/server.go
@@ -4,15 +4,15 @@ import (
 	"net/http"
 
 	"github.com/go-chi/chi/v5"
-	"github.com/hourse"
+	"github.com/house"
 )
 
 type Server struct {
 	router  *chi.Mux
-	service hourse.Service
+	service house.Service
 }
 
-func NewServer(r *chi.Mux, service hourse.Service) *Server {
+func NewServer(r *chi.Mux, service house.Service) *Server {
 	server := new(Server)
 	server.router = r
 	server.service = service
