# openapi.yaml
@@ -2,17 +2,17 @@ openapi: "3.0.3"
 info:
   title: Simple API overview
   version: 1.0.0
-  description: A simple API to operate hourse
+  description: A simple API to operate house
 
 servers:
   - url: http://localhost:8080/api/v1
 
 paths:
-  /hourse/{id}:
+  /house/{id}:
     get:
-      description: return a hourse
+      description: return a house
       tags:
-        - Hourse
+        - house
       parameters:
         - in: header
           name: x-user-id
@@ -30,10 +30,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HourseResponse"
-  /hourse:
+                $ref: "#/components/schemas/houseResponse"
+  /house:
     get:
-      description: return a list of hourse
+      description: return a list of house
       parameters:
         - in: header
           name: x-user-id
@@ -58,9 +58,9 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/HourseResponse"
+                  $ref: "#/components/schemas/houseResponse"
       tags:
-        - Hourse
+        - house
     put:
       description: upsert data
       requestBody:
@@ -68,7 +68,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/HourseRequest"
+              $ref: "#/components/schemas/houseRequest"
       responses:
         "204":
           description: Success
@@ -85,7 +85,7 @@ components:
       scheme: bearer
 
   schemas:
-    HourseResponse:
+    houseResponse:
       type: object
       properties:
         id:
@@ -94,7 +94,7 @@ components:
         shape:
           type: string
           description: shape
-    HourseRequest:
+    houseRequest:
       type: object
       properties:
         name:
